fix: z-index of appkit modal

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -142,6 +142,10 @@
   [role="button"]:not([disabled]) {
     cursor: pointer;
   }
+
+  w3m-modal.open {
+    z-index: 50
+  }
 }
 
 @utility container {
